Actualizacion de metoodo initData y de variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.application.name=User Service
 
-# spring.r2dbc.url=${SPRING_R2DBC_URL}
-# spring.r2dbc.username=${SPRING_R2DBC_USERNAME}
-# spring.r2dbc.password=${SPRING_R2DBC_PASSWORD}
+spring.r2dbc.url=${SPRING_R2DBC_URL}
+spring.r2dbc.username=${SPRING_R2DBC_USERNAME}
+spring.r2dbc.password=${SPRING_R2DBC_PASSWORD}
 
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/testdb
-spring.r2dbc.username=securityApp
-spring.r2dbc.password=securityApp
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
