Se agrega descubrimiento de eureka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=User Service
-
+spring.application.name=user-service
+server.port=8081
 spring.r2dbc.url=${SPRING_R2DBC_URL}
 spring.r2dbc.username=${SPRING_R2DBC_USERNAME}
 spring.r2dbc.password=${SPRING_R2DBC_PASSWORD}
@@ -10,3 +10,9 @@ spring.sql.init.mode=always
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+management.endpoints.web.exposure.include=info
+management.endpoint.info.enabled=true
