--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,6 @@ server.port=8081
 spring.r2dbc.url=${SPRING_R2DBC_URL}
 spring.r2dbc.username=${SPRING_R2DBC_USERNAME}
 spring.r2dbc.password=${SPRING_R2DBC_PASSWORD}
-
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.sql.init.mode=always
 
@@ -16,3 +14,6 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 management.endpoints.web.exposure.include=info
 management.endpoint.info.enabled=true
+
+jwt.secret=${SECRET_KEY}
+jwt.expiration=600000
